Quorum3/Library/Tests/TypeCheckerGenerated/Pass/ImpAssignObjectBooleanField.quorum
class Main
    boolean v = true
    action Main
        Test(v)
    end

    action Test(Object var)
        if var:GetValue() = true
            output "passed"
        end
    end
end
