Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignBoolObjBooleanField.quorum
class Main
    boolean v = true
    action Main
        Test(v)
    end

    action Test(Boolean var)
    end
end
